samples/_failures_safe/1761150936_a6fa0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e197e4a.c: In function ‘main’:
./samples/SAFE/__tmp_4e197e4a.c:162:15: error: expected ‘)’ at end of input
  162 |     if (!fgets
      |        ~      ^
      |               )
./samples/SAFE/__tmp_4e197e4a.c:162:5: error: expected declaration or statement at end of input
  162 |     if (!fgets
      |     ^~
